--- a/advanced_css/css/styles.css
+++ b/advanced_css/css/styles.css
@@ -66,7 +66,7 @@ nav li a  {
 	color: navajowhite;
 	font-size: 24px;
 	font-weight: bold;
-	text decoration: none;
+	text-decoration: none;
 	margin: 0 20px;
 	width: 125px;
 	height: 40px;
@@ -94,5 +94,4 @@ main {
 }
 #mainone {
 	display: flex;
-}
 }
