--- a/advanced_css/css/styles.css
+++ b/advanced_css/css/styles.css
@@ -1,97 +1,15 @@
-body {
-	background-color: maroon;
+/* Global Styles*/
+
+body{
+	background-color: #401019;
 }
 
-#container {
-	background-color: navajowhite;
-	width: 65%;
-	margin: 20px auto;
-	border: 5px solid black;
-	border-radius: 5px;
-	padding: 20px;
-}
-#banner {
-	width: 100%;
-}
-
-.headingstyle {
-	font-family: Arial;
-}
-
-#col1 {
-	width: 50%;
-	border: 2px solid black;
-	margin: 20px;
-	padding: 20px;
-}
-
-#col2 {
-	width: 50%;
-	border: 2px solid black;
-	margin: 20px;
-	padding: 20px;
-}
-
-
-
-img {
+img{
 	display: block;
-	margin: 0 auto;
-	width: 100%;
+	width: 100%
+	margin:0 auto;
 }
-.one {
-	width: 75%;
-}
-nav {
-	text-align: center;
-	margin: 20px 0;
-	background-color: rgb(0, 0, 30);
-	border-radius: 5px;
-	
-}
+#container{
+	background-color:#BF9765;
 
-nav ul {
-	list-style-type: none;
-	padding: 0;
-
-}
-
-nav li {
-	display: inline-block;
-
-}
-
-nav li a  {
-	display: block;
-	color: navajowhite;
-	font-size: 24px;
-	font-weight: bold;
-	text-decoration: none;
-	margin: 0 20px;
-	width: 125px;
-	height: 40px;
-	line-height: 40px;
-
-}
-
-nav a:hover {
-	background-color: navajowhite;
-	color: rgb(0, 0, 30);
-}
-
-
-h1, h2, h3, footer {
-	text-align: center;
-}
-ul {
-	list-style-type: square;
-}
-hr {
-	border: 1px solid black
-}
-main {
-	font-size: 20px;
-}
-#mainone {
-	display: flex;
 }
